# reactpy-dashboard

./: .gitignore  .pylintrc  README.md  app_main.py  app_main_router_test.py  fast_app.py  fast_server.py  pyproject.toml  pytest.ini  run_dashboard.py  usage.py
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  pip-init.sh  reactpy-projects.code-workspace
examples/: barchart_example.py  form_complex.py  form_login.py  hello.py  hello_class.py  pico_run.py  router_test.py  table_example.py
manager/: __init__.py  command.py  run_server.py
modules/: assets.py  bootstrap.py  css_links.py  dashboard_options.py  inline_style.py  pico.py  reactpy_helpers.py  server_options.py  tailwind.py
pages/: __init__.py  app_main.py  dashboard_page.py  not_found_404.py  page_container.py  products.py  products_page.py  sign_in.py  sign_up.py  users.py  users_page.py
pages/components/: __init__.py  app_store.py  breadcrumbs.py  button.py  copyright.py  dark_mode_button.py  dark_mode_provider.py  footer.py  gitHub_button.py  icon.py  input.py  logo.py  mobile_logic.py  page_title.py  reactpy_table.py  side_bar.py  table_paginator.py  table_tools.py  table_widgets.py  top_bar.py  top_panel.py
pages/dashboard/: acquisition_overview.py  latest_customers.py  overview_panel.py  sales_chart.py  transactions_table.py
pages/forms/: __init__.py  password_input.py  standard_form_container.py  submit_button.py  text_input.py
pages/products/: __init__.py  add_product_modal.py  delete_product_modal.py  edit_product_modal.py  products_data.py  products_table.py
pages/settings/: dark_mode.py  settings_store.py
pages/users/: __init__.py  user_data.py  users_table.py
reactpy_forms/: __init__.py  field_model.py  form_model.py  forms_core.py  model.py  types.py
reactpy_table/: __init__.py  abstract_column_sort.py  abstract_paginator.py  abstract_plugin.py  abstract_row_model.py  abstract_table.py  abstract_table_search.py  paginator.py  plugin.py  row_model.py  simple_column_sort.py  simple_paginator.py  simple_row_model.py  simple_table_search.py  table_core.py  table_data.py  types.py
static/css/: css2.css  index.css  tailwind-3.3.5.css  tailwindcss-2.2.19.css  tailwindcss-3.3.1.css
tests/: conftest.py  page_containers.py  test_api.py  test_complex_form.py  test_form.py  test_hello.py  test_login_form.py  test_props.py  test_sample.py  test_table.py  wait_page.py
tests/tooling/: wait_stable.py
utils/: caller.py  child_list.py  component_class.py  fast_server.py  find_port.py  inline_style.py  logger.py  make_data.py  pico_run.py  props.py  reactpy_helpers.py  static_counter.py  types.py  unique_sequence.py  var_name.py
utils/server_options/: __init__.py  assets.py  bootstrap_options.py  dashboard_options.py  default_options.py  pico_options.py  server_options.py  tailwind_options.py
