[tool.poetry]
name = "reactpy-dashboard"
version = "0.1.0"
description = ""
authors = ["Steve Jones <jonesst2608@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"

fastapi = "^0.109.0"
reactpy = "^1.0.2"
reactpy-apexcharts = {path = "../reactpy-apexcharts", develop = true}
reactpy-github-buttons = "0.0.12"
reactpy-router = {url = "https://raw.githubusercontent.com/stevej2608/reactpy-router/master/dist/reactpy_router-0.1.1-py2.py3-none-any.whl"}
reactpy-table = {path = "../reactpy-table", develop = true}
uvicorn = "0.22.0"

[tool.poetry.group.dev.dependencies]

annotated-types = "0.6.0"
playwright = "1.34.0"
pytest-asyncio = "0.21.1"
pytest-mock = "3.12.0"
pytest-rerunfailures = "12.0"
pytest-timeout = "2.2.0"
python-dotenv = "1.0.0"
responses = "0.24.1"
sanic-cors = "2.2.0"
sanic-testing = "23.6.0"
pytest-playwright = "^0.4.3"
autoflake = "^2.2.1"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
# https://marketplace.visualstudio.com/items?itemName=charliermarsh.ruff

line-length = 120

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingTypeStubs = false


[[tool.poetry.source]]
name = "pypicloud"
url = "http://debian-server:6543/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
