[tool.poetry]
name = "reactpy-dashboard"
version = "0.1.3"
description = ""
authors = ["Steve Jones <jonesst2608@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"

fastapi = "^0.109.0"
reactpy = "^1.1.0"
reactpy-apexcharts = {path = "../reactpy-apexcharts", develop = true}
reactpy-github-buttons = "0.0.14"
reactpy-router = "1.0.4"
uvicorn = "0.22.0"
reactpy-table = "0.0.15"
reactpy-forms = "0.0.8"
reactpy-utils = "^0.0.33"

[tool.poetry.group.dev.dependencies]

fastapi = "^0.109.0"
playwright = "1.41.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-timeout = "2.2.0"
starlette = ">=0.13.6"
trio = "^0.24.0"
twine = "^4.0.2"
uvicorn = {extras = ["standard"], version = ">=0.19.0"}

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
# https://marketplace.visualstudio.com/items?itemName=charliermarsh.ruff

line-length = 120

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingTypeStubs = false
ignore = ["tmp"]

[tool.pytest.ini_options]
testpaths = "tests"
log_cli_level = "INFO"
filterwarnings = "ignore::DeprecationWarning"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
